<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigationBooks">

    <fragment
        android:id="@+id/navigationBooks"
        android:name="com.itj.booksapp.ui.books.BooksFragment"
        android:label="@string/title_books_wishlist"
        tools:layout="@layout/books_fragment" >
        <argument
            android:name="book"
            app:argType="string"
            android:defaultValue="test"
            app:nullable="false"/>

<!--        <action-->
<!--            android:id="@+id/action_navigationBooks_to_addBookDetailDialog"-->
<!--            app:destination="@id/AddBookDetailDialog">-->
<!--        </action>-->
    </fragment>

    <fragment
        android:id="@+id/AddBookDetailDialog"
        android:name="com.itj.booksapp.ui.books.AddBookAndDetailDialog"
        android:label="@string/add_book_text"
        tools:layout="@layout/add_book_and_detail_dialog">
        <action
            android:id="@+id/action_navigationAddBookDetailDialog_to_bookDetailFragment"
            app:destination="@id/bookDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigationSearch"
        android:name="com.itj.booksapp.ui.search.SearchFragment"
        android:label="@string/title_isbn_search"
        tools:layout="@layout/search_fragment" />
    <fragment
        android:id="@+id/navigationLibrary"
        android:name="com.itj.booksapp.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/library_fragment" />
    <fragment
        android:id="@+id/exampleFragment"
        android:name="com.itj.booksapp.ui.example.ExampleFragment"
        android:label="example_fragment"
        tools:layout="@layout/example_fragment" />
    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="com.itj.booksapp.ui.BookDetailFragment"
        android:label="book_detail_fragment"
        tools:layout="@layout/book_detail_fragment" />
</navigation>