<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.itj.booksapp.ui.search.SearchViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search.SearchFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:visibility="@{viewModel.searchContainerVisibility}">

           <TextView
               android:id="@+id/id_text_search"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_margin="24dp"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               android:text="@string/search_description"
               android:textAlignment="center"
               android:textSize="16sp"
               />

            <ImageView
                android:id="@+id/id_camera_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_search_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/id_text_search"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/book_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.bookContainerVisibility}">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="108dp"
                android:layout_height="156dp"
                android:layout_marginTop="16dp"
                app:loadBookImage="@{viewModel.bookLiveData.data.image}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_book_cover" />

            <TextView
                android:id="@+id/book_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="56dp"
                android:text="@{viewModel.bookLiveData.data.title}"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                tools:text="@string/lord_rings_title" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.bookLiveData.data.author}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/book_title_detail"
                tools:text="@string/author_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/id_get_book_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="@string/view_detail_text"
                android:theme="@style/GreenButtonStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/author_name"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>